tests/baselines/reference/exportBinding.errors.txt
exportConsts.ts(3,16): error TS2448: Block-scoped variable 'x' used before its declaration.
exportConsts.ts(3,16): error TS2454: Variable 'x' is used before being assigned.
exportVars.ts(3,16): error TS2454: Variable 'y' is used before being assigned.


==== exportConsts.ts (2 errors) ====
    export { x }
    export { x as xx }
    export default x;
                   ~
!!! error TS2448: Block-scoped variable 'x' used before its declaration.
!!! related TS2728 exportConsts.ts:5:7: 'x' is declared here.
                   ~
!!! error TS2454: Variable 'x' is used before being assigned.
    
    const x = 'x'
    
    export { Y as Z }
    class Y {}
    
==== exportVars.ts (1 errors) ====
    export { y }
    export { y as yy }
    export default y;
                   ~
!!! error TS2454: Variable 'y' is used before being assigned.
    var y = 'y'
    